# dew

./: .gitignore  AGENTS.md  Cargo.toml  README.md  playground.dew  record.txt
.cursor/: settings.json
.opencode/: oh-my-opencode-slim.json
agents/: researcher.md
assets/: playground.html
docs/: AGENTS.md  agent-plan.md  applied-design.md  book.toml  initial-design.md
examples/: AGENTS.md  a_plus_b_stdio.dew  affine_arith.dew  affine_borrow.dew  affine_call.dew  affine_consume.dew  arithmetic.dew  box_double.dew  box_leak.dew  box_ok.dew  comments.dew  conditional.dew  counter.dew  def_and_pipe.dew  dup_int.dew  factorial.dew  fail_unbound.dew  fibonacci.dew  fnonce.dew  fnonce_err.dew  higher_order.dew  identity.dew  if_else.dew  list_basic.dew  list_infinite.dew  list_isnil.dew  list_tail.dew  list_take.dew  list_three.dew  map_filter.dew  match_expr.dew  nested.dew  nested_box.dew  playground.dew  primes.dew  pure_fn.dew  recursion.dew  struct_abs.dew  struct_example.dew
extension/: language-config.json  package.json
src/: AGENTS.md  ast.rs  desugar.rs  diagnostics.rs  eval.rs  flat_ir.rs  include.rs  ir.rs  ir_gen.rs  lexer.rs  lib.rs  lower.rs  lsp.rs  main.rs  nameres.rs  parser.rs  rx2dew_ir.rs  rx_parser.rs  semantic_tokens.rs  serve.rs  strictness.rs  typeck.rs  types.rs  value.rs
stdlib/: affine.dew  io.dew  list.dew
tests/: run-fail-tests.sh
tools/: comprehensive_test_runner.sh  ll2dew.py  rx2dew.py  rx_pipeline_test.sh  test_comprehensive.sh  test_runner.sh
vscode-dew/: .vscodeignore  README.md  extension.js  install.sh  package-lock.json  (+3 more)
(+466 files in other folders)
