[package]
name = "dew"
version = "0.1.0"
edition = "2024"
description = "Dew programming language compiler — Lazy + Affine + Closure"

[[bin]]
name = "dew"
path = "src/main.rs"

[[bin]]
name = "rx2dew"
path = "src/bin/rx2dew.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# JSON serialization for IR output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pretty diagnostic output
ariadne = "0.4"

[dev-dependencies]
# Test utilities
pretty_assertions = "1"
